# backend

./: .gitignore  README.md  git.sh  proxy.code-workspace
app-demo/: README.md  pom.xml
gin-gorm/: .gitignore  Makefile  README.md  go.mod  settings.yaml
gin-gorm/src/: Makefile  README.md  main.go
gin-gorm/test/: build_test.go  gin-gorm_test.go  tree.json
net-proxy/: .gitignore  Makefile  README.md  go.mod  main.go  proxy.json  settings.json
net-proxy/inetwork/: itcp_conn.go  itcp_mid_ware.go  itcp_mid_ware_man.go  itcp_msg.go  itcp_msg_handler.go  itcp_pac_kit.go  itcp_pac_man.go  itcp_req.go  itcp_server.go
net-proxy/iproxy/: itcp_conn.go  itcp_mid_ware.go  itcp_msg.go  itcp_pac_kit.go  itcp_req.go  itcp_server.go
net-proxy/network/: tcp_conn.go  tcp_mid_ware.go  tcp_mid_ware_man.go  tcp_msg.go  tcp_msg_handler.go  tcp_pac_kit.go  tcp_pac_man.go  tcp_req.go  tcp_server.go
net-proxy/proxy/: tcp_conn.go  tcp_mid_ware.go  tcp_msg.go  tcp_pac_kit.go  tcp_req.go  tcp_server.go
netty-demo/: README.md  pom.xml
proj-demo/: README.md  pom.xml
proxy/: .gitignore  Changelog  Makefile  README.md  go.mod  main.go  proxy.json  server  settings.yaml
proxy-client/: .gitignore  Makefile  client  main.go
servlet-demo/: .gitignore  README.md  pom.xml
tcp-ip/: .gitignore  CMakeLists.txt  Makefile  README.md
tcp-ip/ch01/: README.md  client.cc  server.cc  test_fd.cc  test_rw.cc
tcp-ip/ch01/go/client/: client.go
tcp-ip/ch01/go/server/: server.go
tcp-ip/ch02/: README.md  tcp_client.cc  tcp_server.cc
tcp-ip/ch02/go/client/: tcp_client.go
tcp-ip/ch02/go/server/: tcp_server.go
tcp-ip/ch03/: README.md  test_inet.cc
tcp-ip/ch03/go/: test_endian.go
tcp-ip/ch04/: README.md  echo_client.cc  echo_server.cc
tcp-ip/ch04/go/client/: echo_client.go
tcp-ip/ch04/go/server/: echo_server.go
tcp-ip/ch05/: README.md
tcp-ip/ch06/: README.md  conn_client.cc  udp_client.cc  udp_server.cc
tcp-ip/ch06/go/conn_client/: conn_client.go
tcp-ip/ch06/go/udp_client/: udp_client.go
tcp-ip/ch06/go/udp_server/: udp_server.go
tcp-ip/ch07/: README.md  file_client.cc  file_server.cc
tcp-ip/ch07/go/client/: file_client.go
tcp-ip/ch07/go/server/: file_server.go
tcp-ip/ch08/: README.md  test_gethostbyaddr.cc  test_gethostbyname.cc
tcp-ip/ch08/go/: test_lookup.go
tcp-ip/ch09/: README.md  reuseaddr_server.cc  test_sockopt.cc
tcp-ip/ch10/: README.md  kill_zombie.cc  proc_client.cc  proc_server.cc  test_fork.cc  test_sigaction.cc  test_signal.cc  test_wait.cc  test_waitpid.cc  zombie.cc
tcp-ip/ch10/go/: test_cmd.go
tcp-ip/ch11/: README.md  pipe_server.cc  test_pipe1.cc  test_pipe2.cc  test_pipe3.cc
tcp-ip/ch12/: README.md  select_server.cc  test_select.cc
tcp-ip/ch13/: README.md  oob_client.cc  oob_server.cc  peek_client.cc  peek_server.cc  test_readv.cc  test_writev.cc
tcp-ip/ch14/: README.md  broadcast_client.cc  broadcast_server.cc  multicast_client.cc  multicast_server.cc
tcp-ip/ch14/go/broadcast_client/: broadcast_client.go
tcp-ip/ch14/go/broadcast_server/: broadcast_server.go
tcp-ip/ch14/go/multicast_client/: multicast_client.go
tcp-ip/ch14/go/multicast_server/: multicast_server.go
tcp-ip/ch15/: README.md  echo_client.cc  echo_server.cc  fd_fp.cc  io.cc
tcp-ip/ch15/go/client/: echo_client.go
tcp-ip/ch15/go/fd_fp/: fd_fp.go
tcp-ip/ch15/go/io/: io.go
tcp-ip/ch15/go/server/: echo_server.go
tcp-ip/ch16/: README.md  client.cc  server1.cc  server2.cc  test_dup.cc
tcp-ip/ch16/go/client/: client.go
tcp-ip/ch16/go/server1/: server1.go
tcp-ip/ch16/go/server2/: server2.go
tcp-ip/ch17/: README.md  epoll_server.cc
tcp-ip/ch18/: README.md  pthread1.cc  pthread2.cc  pthread3.cc  pthread4.cc  pthread_client.cc  pthread_server.cc
tcp-ip/ch18/go/goroutine1/: goroutine1.go
tcp-ip/ch18/go/goroutine2/: goroutine2.go
tcp-ip/ch18/go/goroutine3/: goroutine3.go
tcp-ip/ch18/go/goroutine4/: goroutine4.go
tcp-ip/ch18/go/goroutine_client/: goroutine_client.go
tcp-ip/ch18/go/goroutine_server/: goroutine_server.go
tcp-ip/ch24/: README.md  http_server.cc  index.html
tcp-server/: Changelog
udp-proxy/: .gitignore  Dockerfile  HTTPS.md  README.md  go.mod  proxy.go
(+195 files in other folders)
